# dimensionality-reduction

./: .gitignore  LICENSE  README.md  pyproject.toml
reduction/: __main__.py  reduction.py
tests/: test_reduction.py
